--- a/public/views/defect-ratio-dashboard.html
+++ b/public/views/defect-ratio-dashboard.html
@@ -1,24 +1,24 @@
 <div class="w3-row">
   <!-- Defect Ratio heading-->
-  <div class="w3-col w3-container w3-green">
+  <div class="w3-col w3-card-4" style="margin-bottom:15px;">
       <div ddt-dashboard-header data="dashboardHeaderData"></div>
   </div>
   <!-- Defect Ratio Graph 1-->
-  <div class="w3-col l6 w3-container w3-red" style="padding: 0px;">
-    <div>
+  <div class="w3-col w3-card-4 s12 m6 l6" style="margin-bottom:15px;">
+    <div class="w3-red">
         AAAAA
     </div>
     <div ddt-line-chart style="width:100%;"></div>
   </div>
   <!-- Defect Ratio Graph 1-->
-  <div class="w3-col l6 w3-container w3-blue" style="padding: 0px; margin: 10px;">
+  <div class="w3-col w3-card-4 s12 m6 l6" style="margin-bottom:15px;">
     <div>
         AAAAA
     </div>
     <div ddt-line-chart></div> 
   </div>
   <!-- Defect Ratio Graph 3-->
-  <div class="w3-col w3-container w3-green">
+  <div class="w3-col w3-green w3-card-4">
     <h2>w3-half</h2> 
   </div>
 </div>
