folder structure is done

--- a/public/views/defect-ratio-dashboard.html
+++ b/public/views/defect-ratio-dashboard.html
@@ -1,22 +1,26 @@
-<div class="w3-row">
+<div class="w3-row-padding">
   <!-- Defect Ratio heading-->
-  <div class="w3-col w3-card-4" style="margin-bottom:15px;">
+  <div class="w3-col w3-card-4">
       <div ddt-dashboard-header data="dashboardHeaderData"></div>
   </div>
+</div>
+<div class="w3-row-padding">
   <!-- Defect Ratio Graph 1-->
-  <div class="w3-col w3-card-4 s12 m6 l6" style="margin-bottom:15px;">
+  <div class="w3-col w3-card-4 s12 m6 l6">
     <div class="w3-red">
         AAAAA
     </div>
     <div ddt-line-chart style="width:100%;"></div>
   </div>
   <!-- Defect Ratio Graph 1-->
-  <div class="w3-col w3-card-4 s12 m6 l6" style="margin-bottom:15px;">
+  <div class="w3-col w3-card-4 s12 m6 l6">
     <div>
         AAAAA
     </div>
     <div ddt-line-chart></div> 
   </div>
+</div>
+<div class="w3-row-padding">
   <!-- Defect Ratio Graph 3-->
   <div class="w3-col w3-green w3-card-4">
     <h2>w3-half</h2> 
